# Image_processor

./: CMakeLists.txt  README.md  base_fabric.h  base_filter.h  bmp_read.cpp  bmp_read.h  controller.cpp  controller.h  crop.cpp  crop.h  crop_fabric.cpp  crop_fabric.h  edge.cpp  edge.h  edge_fabric.cpp  edge_fabric.h  exceptions.h  grayscale.cpp  grayscale.h  grayscale_fabric.cpp  grayscale_fabric.h  image.cpp  image.h  image_processor.cpp  mirror.cpp  mirror.h  mirror_fabric.cpp  mirror_fabric.h  negative.cpp  negative.h  negative_fabric.cpp  negative_fabric.h  parser.cpp  parser.h  read_write.h  sharpening.cpp  sharpening.h  sharpening_fabric.cpp  sharpening_fabric.h
