add_executable(
    image_processor
    image_processor.cpp
    image.cpp
    image.h
    parser.h
    parser.cpp
    bmp_read.cpp
    bmp_read.h
    read_write.h
    filters/base_filter.h
    filters/crop.cpp
    filters/crop.h
    filters/negative.cpp
    filters/negative.h
    filters/edge.cpp
    filters/edge.h
    filters/grayscale.cpp
    filters/grayscale.h
    filters/sharpening.cpp
    filters/sharpening.h
    filters/mirror.cpp
    filters/mirror.h
    fabrics/base_fabric.h
    fabrics/crop_fabric.cpp
    fabrics/edge_fabric.h
    fabrics/edge_fabric.cpp
    fabrics/crop_fabric.h
    fabrics/negative_fabric.cpp
    fabrics/negative_fabric.h
    fabrics/grayscale_fabric.h
    fabrics/grayscale_fabric.cpp
    fabrics/mirror_fabric.h
    fabrics/mirror_fabric.cpp
    fabrics/sharpening_fabric.h
    fabrics/sharpening_fabric.cpp
    controller.cpp
    controller.h
    exceptions.h
)
